--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -2,8 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <script type="text/javascript" src="fizzbuzz.js"></script>
+
+    </script>
     <title></title>
-    <script type="text/javascript" src="palindrom.js"></script>
   </head>
   <body>
 
