--- a/dom.html
+++ b/dom.html
@@ -7,9 +7,9 @@
   <body>
 
 
+      <script type="text/javascript" src="dom.js"></script>
 
 
-    <script type="text/javascript" src="functions.js"></script>
   </body>
 
 </html>
